KisIdleWatcher: actually _use_ the delay parameter

A parameter "delay" was added to KisIdleWatcher, but the hard-coded
constant was used instead. This makes it possible to update the
overview widget a bit more aggressively.

BUG:443674