libs/image/kis_idle_watcher.h
@@ -20,7 +20,7 @@ class KRITAIMAGE_EXPORT KisIdleWatcher : public QObject
 {
     Q_OBJECT
 public:
-    KisIdleWatcher(int delay, QObject* parent = 0);
+    KisIdleWatcher(int delay = 200, QObject* parent = 0);
     ~KisIdleWatcher() override;
 
     bool isIdle() const;
